# snek

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  headers2Asm.cpp  shell.nix  snek  snek.asm  test  test.cpp
.cache/clangd/index/: headers2Asm.cpp.17C946831B670A92.idx
